--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <a href="#">Contacto</a>
                 </nav>
                 <div class="social">
-                    <div><a href="#"></a></div>
+                    <div><a href="#"> Facebook</a>
+                        <a href="#"> Instagram</a></div>
                 </div>
             </div>
             <div class="texto-principal">
