--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="padre">
-        <header class="header">
+        <header class="header margen-interno">
             <div class="menu">
                 <div class="logo"> 
                     <a href="index.html">MiPymeFinanciero</a>
@@ -29,24 +29,74 @@
                 </div>
             </div>
             <div class="texto-principal">
-                <h1> </h1>
+                <h1>El 1 de octubre del año 2018 Mi Pyme Financiero surge por parte del Licenciado en 
+                    Administración de empresa Donal Amahel Solorzano, el cual tenía la idea de una 
+                    empresa que pudiera ayudar a financiar a todo aquel emprendedor, con una micro 
+                    o mediana empresa. Pero no contaba con la capacidad monetaria necesaria para 
+                    poder aperturar una empresa de esta dimensión; por lo tanto, comenzó dando 
+                    créditos de pequeñas cantidades a personas cercanas, de ahí formo su pequeña 
+                    empresa llamada “Creciendo Juntos”, con la cual al ver el resultado positivo de sus 
+                    ganancias decidió buscar personas que quisieran invertir en su empresa </h1>
             </div>
         </header>
-        <section class="section">
+        <section class="section margen-interno">
             <div class="articulos">
-                <article class="article"></article>
-                <article class="article"></article>
-                <article class="article"></article>
-                <article class="article"></article>
-                <nav class="navegacion"></nav>
+                <article class="article">
+                    <img src="img/Equipo1.jpg" alt="">
+                    <h3>13 de abril del 2024</h3>
+                    <h2>Nuestro equipo</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis dolorum unde facilis asperiores, commodi itaque veritatis deserunt. Quia enim fugit iusto, harum non nostrum doloremque porro laudantium quasi unde odit.</p>
+                    <a href="#">Leer más...</a>
+                </article>
+                <article class="article">
+                    <img src="img/Equipo4.jpg" alt="">
+                    <h3>13 de abril del 2024</h3>
+                    <h2>Responsabilidad</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis dolorum unde facilis asperiores, commodi itaque veritatis deserunt. Quia enim fugit iusto, harum non nostrum doloremque porro laudantium quasi unde odit.</p>  
+                    <a href="#">Leer más...</a>
+                </article>
+                <article class="article">
+                    <img src="img/Equipo2.jpg" alt="">
+                    <h3>13 de abril del 2024</h3>
+                    <h2>Solidaridad</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis dolorum unde facilis asperiores, commodi itaque veritatis deserunt. Quia enim fugit iusto, harum non nostrum doloremque porro laudantium quasi unde odit.</p>
+                    <a href="#">Leer más...</a>
+                </article>
+                <article class="article">
+                    <img src="img/Equipo3.jpg" alt="">
+                    <h3>13 de abril del 2024</h3>
+                    <h2>compromiso</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis dolorum unde facilis asperiores, commodi itaque veritatis deserunt. Quia enim fugit iusto, harum non nostrum doloremque porro laudantium quasi unde odit.</p>
+                    <a href="#">Leer más...</a>
+                </article>
+                <nav class="navegacion">
+                    <a href="#">Inicio</a>
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">Final</a>
+                </nav>
             </div>
             <aside class="aside">
-                <div class="publicidad"></div>
-                <div class="publicidad"></div>
+                <div class="publicidad">
+                    <h4>Contrataciones</h4>
+                    <img src="img/contrataciones.jpeg" alt="">
+                </div>
+                <div class="publicidad">
+                    <h4>Sedes</h4>
+                    <img src="img/sedes.jpg" alt="">
+                </div>
+                <div class="publicidad">
+                    <h4>Valores</h4>
+                    <img src="img/publicidad1.jpg" alt="">
+                </div>
             </aside>
         </section>
-        <footer class="footer">
-            <nav class="pie"></nav>
+        <footer class="footer margen-interno">
+            <nav class="pie">
+                <a href="#">Desarrollado por Marcos Salgado</a>
+            </nav>
         </footer>
     </div>
 </body>
