modificacion de pagina principal

--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Marcos1</title>
+    <title>MI PYME FINANCIERO</title>
     <link rel="stylesheet" href="CSS/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!--LINK DE LAS FUENTES DE LETRA-->
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="padre">
-        <header class="header margen-interno">
-            <div class="menu">
-                <div class="logo"> 
+        <header class="header">
+            <div class="menu margen-interno">
+                <div class="logo">   
+                    <div class="imglogo">
+                        <img src="img/logo mi pyme1.png" alt="img">
+                    </div>                 
                     <a href="index.html">MiPymeFinanciero</a>
+                                    
                 </div>
                 <nav class="nav"> 
                     <a href="#">Inicio</a>
@@ -24,19 +29,13 @@
                     <a href="#">Contacto</a>
                 </nav>
                 <div class="social">
-                    <div><a href="#"> Facebook</a>
-                        <a href="#"> Instagram</a></div>
+                    <div><a class="facebook" href="https://www.facebook.com/mipymefinancierohn"> Facebook</a>
+                        <a class="insta" href="https://instagram.com/mipymefinanciero?igshid=YmMyMTA2M2Y= "> Instagram</a></div>
                 </div>
             </div>
             <div class="texto-principal">
-                <h1>El 1 de octubre del año 2018 Mi Pyme Financiero surge por parte del Licenciado en 
-                    Administración de empresa Donal Amahel Solorzano, el cual tenía la idea de una 
-                    empresa que pudiera ayudar a financiar a todo aquel emprendedor, con una micro 
-                    o mediana empresa. Pero no contaba con la capacidad monetaria necesaria para 
-                    poder aperturar una empresa de esta dimensión; por lo tanto, comenzó dando 
-                    créditos de pequeñas cantidades a personas cercanas, de ahí formo su pequeña 
-                    empresa llamada “Creciendo Juntos”, con la cual al ver el resultado positivo de sus 
-                    ganancias decidió buscar personas que quisieran invertir en su empresa </h1>
+                <h1>BIENVENIDO A MI PYME FINANCIERO </h1>
+                <h2 class="creciendo">¡CRECIENDO JUNTOS!</h2>
             </div>
         </header>
         <section class="section margen-interno">
@@ -84,7 +83,7 @@
                     <img src="img/contrataciones.jpeg" alt="">
                 </div>
                 <div class="publicidad">
-                    <h4>Sedes</h4>
+                    <h4>Agencias</h4>
                     <img src="img/sedes.jpg" alt="">
                 </div>
                 <div class="publicidad">
