--- a/Contactos.html
+++ b/Contactos.html
@@ -7,43 +7,67 @@
     <title>Contactos</title>
     <!--CREACION DE LA PAGINA DE CONTACTOS-->
     <link rel="stylesheet" href="CSS/contactos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <nav class="nabar">
-            <a href="#"> Inicio</a>
-            <a href="#"> Nosotros</a>
-            <a href="#"> Servicios</a>
-            <a href="#"> Noticias</a>
-            <a href="#"> Contactos</a>
-        </nav>
-        <section class="textos-header">
-            <h1>Potencia tus ventas al menos en un 200%</h1>
-            <h2>Con una pagina potente</h2>
-        </section>
-        <!--AGREGANDO LA CLASE WAVE PARA DEFINIR EL TAMAÑO DE LA OLA-->
-        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+
+    <div class="padre">
+    <header>       
+            <div class="menu margen-interno">
+                <div class="logo">   
+                    <div class="imglogo">
+                        <img src="img/logo mi pyme1.png" alt="img">
+                    </div>                 
+                        <a href="index.html">MiPymeFinanciero</a>
+                                    
+                </div>
+                <nav class="nav"> 
+                    <a href="#">Inicio</a>
+                    <a href="#">Nosotros</a>
+                    <a href="#">Servicios</a>
+                    <a href="#">Noticias</a>
+                    <a href="#">Contacto</a>
+                </nav>
+                <div class="social">
+                    <div><a class="facebook" href="https://www.facebook.com/mipymefinancierohn"> Facebook</a>
+                        <a class="insta" href="https://instagram.com/mipymefinanciero?igshid=YmMyMTA2M2Y= "> Instagram</a>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <section class="textos-header">
+                <h1>Potencia tus ventas al menos en un 200%</h1>
+                <h2>Con una pagina potente</h2>
+               </section>
+    </div>       
+         </div>
+           
+            <!--AGREGANDO LA CLASE WAVE PARA DEFINIR EL TAMAÑO DE LA OLA-->
+            <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: #08f;"></path>
-            </svg></div>
+                    style="stroke: none; fill: rgb(255, 255, 255);"></path>
+             </svg>
+            </div>
     </header>
     <main>
         <section class="contenedor sobre-nosotros">
             <h2 class="titulo">Nuestros Creditos</h2>
             <div class="contenedor-sobre-nosotros">
-                <img class="imgen1" src="img/x.jpg" alt="">
+                <img class="imagen1" src="img/contrataciones.jpeg" alt="">
                 <div class="contenidos-textos">
                     <h3><span>1</span>Los mejores servicios</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, reprehenderit accusamus. Ipsa, quam
                         reprehenderit eum fugiat accusamus totam amet, quis optio dolorem doloremque sint veritatis
                         pariatur fuga dolore nemo consequuntur.</p>
+
                     <h3><span>2</span>Los mejores servicios</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, reprehenderit accusamus. Ipsa, quam
                         reprehenderit eum fugiat accusamus totam amet, quis optio dolorem doloremque sint veritatis
-                        pariatur fuga dolore nemo consequuntur.</p>
+                        pariatur fuga dolore nemo consequuntur.</p>                      
                 </div>
             </div>
         </section>
@@ -54,46 +78,59 @@
                     <div class="imagen-port">
                         <img src="img/e5.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/Logo2.jpeg" alt="">
+                            <img src="img/e3.jpg" alt="">
                             <p>NUESTRO TRABAJO</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/e5.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/Logo2.jpeg" alt="">
+                            <img src="img/e3.jpg" alt="">
                             <p>NUESTRO TRABAJO</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/e5.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/Logo2.jpeg" alt="">
+                            <img src="img/e3.jpg" alt="">
                             <p>NUESTRO TRABAJO</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/e5.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/Logo2.jpeg" alt="">
+                            <img src="img/e3.jpg" alt="">
                             <p>NUESTRO TRABAJO</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/e5.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/Logo2.jpeg" alt="">
+                            <img src="img/e3.jpg" alt="">
                             <p>NUESTRO TRABAJO</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/e5.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/Logo2.jpeg" alt="">
+                            <img src="img/e3.jpg" alt="">
                             <p>NUESTRO TRABAJO</p>
                         </div>
                     </div>
-
+                    <div class="imagen-port">
+                        <img src="img/e5.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/e3.jpg" alt="">
+                            <p>NUESTRO TRABAJO</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/e5.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/e3.jpg" alt="">
+                            <p>NUESTRO TRABAJO</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             </div>
