Modificacion barra de navegacion

--- a/Contactos.html
+++ b/Contactos.html
@@ -21,18 +21,16 @@
                 <div class="logo">   
                     <div class="imglogo">
                         <img src="img/LOGO MI PYME VEC 06-07-22.png" alt="img">
-                    </div>                 
-                       
-                                    
+                    </div>                                   
                 </div>
                 <nav class="nav"> 
                     <a href="#">Inicio</a>
                     <a href="#">Acerca de</a>
                     <a href="#">servicios</a>
                     <a href="#">Equipo Mi Pyme</a>
+                    <a href="#">Novedades</a>
                     <a href="#">Agencias</a>
-                    <a href="#">Contactos</a>
-                    <a href="#">Equipo Mi Pyme</a>
+                    <a href="#">Contacto</a>
                     <a href="#">Mi cartera personal</a>
                     <span> </span>
                 </nav>
