--- a/agencias.html
+++ b/agencias.html
@@ -59,7 +59,7 @@
                                 </div>
                             </div>
                             <div class="slider-img">
-                                <img src="img/paraiso/paraiso.jpg" alt="">
+                                <img src="img/agencias/paraiso/paraiso.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                                 </div>
                             </div>
                             <div class="slider-img">
-                                <img src="img/paraiso/paraiso.jpg" alt="">
+                                <img src="img/agencias/paraiso/paraiso.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                             <div class="slider-img">
-                                <img src="img/paraiso/paraiso.jpg" alt="">
+                                <img src="img/agencias/paraiso/paraiso.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                             <div class="product">
                                 <div class="product-img">
                                     <h4>Agencia</h4>
-                                    <img src="img/danli/dnl1.jpg" alt="">
+                                    <img src="img/agencias/danli/dnl1.jpg" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Ubicacion</h4>
@@ -145,7 +145,7 @@
                             <div class="product">
                                 <div class="product-img">
                                     <h4>Agencia</h4>
-                                    <img src="img/danli/dnl2.jpg" alt="">
+                                    <img src="img/agencias/danli/dnl2.jpg" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Ubicacion</h4>
@@ -160,7 +160,7 @@
                             <div class="product">
                                 <div class="product-img">
                                     <h4>Agencia</h4>
-                                    <img src="img/danli/dnl3.jpg" alt="">
+                                    <img src="img/agencias/danli/dnl3.jpg" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Ubicacion</h4>
@@ -194,7 +194,7 @@
                             <div class="product">
                                 <div class="product-img">
                                     <h4>Agencia</h4>
-                                    <img src="img/danli/dnl4.jpg" alt="">
+                                    <img src="img/agencias/danli/dnl4.jpg" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Ubicacion</h4>
@@ -209,7 +209,7 @@
                             <div class="product">
                                 <div class="product-img">
                                     <h4>Agencia</h4>
-                                    <img src="img/danli/dnl5.jpg" alt="">
+                                    <img src="img/agencias/danli/dnl5.jpg" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Ubicacion</h4>
@@ -224,7 +224,7 @@
                             <div class="product">
                                 <div class="product-img">
                                     <h4>Agencia</h4>
-                                    <img src="img/danli/dnl6.jpg" alt="">
+                                    <img src="img/agencias/danli/dnl6.jpg" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Ubicacion</h4>
@@ -258,7 +258,7 @@
                             <div class="product">
                                 <div class="product-img">
                                     <h4>Agencia</h4>
-                                    <img src="img/danli/dnl7.jpg" alt="">
+                                    <img src="img/agencias/danli/dnl7.jpg" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Ubicacion</h4>
@@ -273,7 +273,7 @@
                             <div class="product">
                                 <div class="product-img">
                                     <h4>Agencia</h4>
-                                    <img src="img/danli/dnl8.jpg" alt="">
+                                    <img src="img/agencias/danli/dnl8.jpg" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Ubicacion</h4>
@@ -288,7 +288,7 @@
                             <div class="product">
                                 <div class="product-img">
                                     <h4>Agencia</h4>
-                                    <img src="img/danli/dnl9.jpg" alt="">
+                                    <img src="img/agencias/danli/dnl9.jpg" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Ubicacion</h4>
@@ -315,7 +315,7 @@
     <section class="info container">
 
         <div class="info-img">
-            <img src="img/danli/licDonald.jpg" alt="">
+            <img src="img/agencias/danli/licDonald.jpg" alt="">
         </div>
 
         <div class="info-txt">
