--- a/index.html
+++ b/index.html
@@ -7,35 +7,61 @@
     <link rel="stylesheet" href="CSS/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <!--LINK DE LAS FUENTES DE LETRA-->
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!--LINK PARA LLAMAR A LOS ICONOS DE LAS REDES SOCIALES-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div class="padre">
         <header class="header">
-            <div class="menu margen-interno">
-                <div class="logo">   
-                    <div class="imglogo">
-                        <img src="img/logo mi pyme1.png" alt="img">
-                    </div>                 
-                    <a href="index.html">MiPymeFinanciero</a>
-                                    
-                </div>
-                <nav class="nav"> 
-                    <a href="#">Inicio</a>
-                    <a href="#">Nosotros</a>
-                    <a href="#">Servicios</a>
-                    <a href="#">Noticias</a>
-                    <a href="#">Contacto</a>
+        <div class="menu ">
+             <div class="interior ">
+
+                <nav class="nav">
+                    <a href="#" class="logo" target="blank"><img src="img/LOGO MI PYME VEC 06-07-22.png" alt="Logo"></a>
+                    <ul>
+                      <li><a href="#" target="blank">Inicio</a></li>
+                      <li><a href="#" target="blank">Servicios</a></li>
+                      <li class="submenu">
+                        <a href="#" target="blank">Acerca de</a>
+                        <ul class="hijos">
+                          <li><a href="#">Misión</a></li>
+                          <li><a href="#">Visión</a></li>
+                          <li><a href="#">Valores</a></li>
+                          <li><a href="#">Nuestros Clientes</a></li>
+                       </ul>
+                      </li>
+                      <li><a href="#" target="blank">Equipo Mi Pyme</a></li>
+                      <li><a href="#" target="blank">Novedades</a></li>
+                      <li class="submenu">
+                        <a href="#" target="blank">Agencias</a>
+                        <ul class="hijos">
+                            <a href="">Danlí</a></li>
+                            <li><a href="">El Paraíso</a></li>
+                            <li><a href="">Comayagua</a></li>
+                            <li><a href="">Siguatepeque</a></li>   
+                            <li><a href="">Intibucá</a></li>
+                            <li><a href="">Santa Rosa</a></li>
+                        </ul>
+                      </li>
+                      <li> <a href="">Contacto</a></li>
+                     <li> <a href="">Mi Cartera Personal</a></li>
+                    </ul>
                 </nav>
-                <div class="social">
-                    <div><a class="facebook" href="https://www.facebook.com/mipymefinancierohn"> Facebook</a>
-                        <a class="insta" href="https://instagram.com/mipymefinanciero?igshid=YmMyMTA2M2Y= "> Instagram</a></div>
-                </div>
             </div>
+        </div>
             <div class="texto-principal">
                 <h1>BIENVENIDO A MI PYME FINANCIERO </h1>
                 <h2 class="creciendo">¡CRECIENDO JUNTOS!</h2>
+            </div>
+            <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+                style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: rgb(255, 255, 255);"></path>
+             </svg>
             </div>
         </header>
         <section class="section margen-interno">
@@ -92,11 +118,50 @@
                 </div>
             </aside>
         </section>
-        <footer class="footer margen-interno">
-            <nav class="pie">
-                <a href="#">Desarrollado por Marcos Salgado</a>
-            </nav>
-        </footer>
+    <section class="ola2">
+        <div class="wave2" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-4.22,76.48 C149.99,150.00 271.49,-49.98 505.92,74.52 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: rgb(255, 255, 255);"></path></svg>
+        </div>
+    </section>
+            <!--CREACION DEL FOOTER-->
+    <footer class="footer container">
+
+       
+        <div class="links">
+            <h4>Lorem ipsum dolor </h4>
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </div>
+        <div class="links">
+            <h4>Lorem ipsum dolor</h4>
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </div>
+        <div class="links">
+            <h4>Lorem ipsum dolor</h4>
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </div>
+        <div class="links">
+            <h4>redes sociales</h4>
+            <div class="redes-sociales">
+                <a href="https://www.facebook.com/mipymefinancierohn" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://instagram.com/mipymefinanciero?igshid=YmMyMTA2M2Y=" class="instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+            </div>
+        </div>
+    </footer>
     </div>
 </body>
 </html>
