--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <nav class="nav">
                     <a href="#" class="logo" target="blank"><img src="img/LOGO MI PYME VEC 06-07-22.png" alt="Logo"></a>
                     <ul>
-                      <li><a href="#" target="blank">Inicio</a></li>
+                      <li><a href="index.html" target="blank">Inicio</a></li>
                       <li><a href="#" target="blank">Servicios</a></li>
                       <li class="submenu">
                         <a href="#" target="blank">Acerca de</a>
                         <ul class="hijos">
-                          <li><a href="#">Misión</a></li>
-                          <li><a href="#">Visión</a></li>
+                          <li><a href="mision.html">Misión</a></li>
+                          <li><a href="vision.html">Visión</a></li>
                           <li><a href="#">Valores</a></li>
                           <li><a href="#">Nuestros Clientes</a></li>
                        </ul>
