--- a/mision.html
+++ b/mision.html
@@ -18,13 +18,13 @@
                     <nav class="nav">
                         <a href="#" class="logo" target="blank"><img src="img/LOGO MI PYME VEC 06-07-22.png" alt="Logo"></a>
                         <ul>
-                          <li><a href="#" target="blank">Inicio</a></li>
+                          <li><a href="index.html" target="blank" target="_self">Inicio</a></li>
                           <li><a href="#" target="blank">Servicios</a></li>
                           <li class="submenu">
                             <a href="#" target="blank">Acerca de</a>
                             <ul class="hijos">
-                              <li><a href="#">Misión</a></li>
-                              <li><a href="#">Visión</a></li>
+                              <li><a href="mision.html">Misión</a></li>
+                              <li><a href="vision.html">Visión</a></li>
                               <li><a href="#">Valores</a></li>
                               <li><a href="#">Nuestros Clientes</a></li>
                            </ul>
@@ -54,7 +54,7 @@
         <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
             <defs>
                 <linearGradient id="gradiente-wave" x1="0%" y1="0%" x2="100%" y2="0%">
-                    <stop offset="0%" style="stop-color:rgba(255, 255, 255, 0.719);stop-opacity:1" />
+                    <stop offset="0%" style="stop-color:rgb(255, 255, 255);stop-opacity:1" />
                     <stop offset="100%" style="stop-color:#026b9cb6;stop-opacity:1" />
                 </linearGradient>
             </defs>
@@ -66,14 +66,14 @@
             </header>
 
         <div class="misionvideo">
-            <h1> Nuestra Mision</h1>
+            <h1> Nuestra Misión</h1>
             <p>“Somos una empresa responsable, que se dedica a impulsar el 
                 crecimiento sostenible de las pequeñas y medianas empresas, 
                 bridándoles nuestros servicios de microcréditos, con pagos accesibles”.</p>
                 <button type="button">Regresar</button>
         </div>
         <video muted autoplay loop>
-            <source src="videos/mision.mp4" type="video/mp4">
+            <source src="videos/mision2.mp4" type="video/mp4">
         </video> 
         <div class="capa"></div>
 
