Modificacion del footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <!--LINK PARA LLAMAR A LOS ICONOS DE LAS REDES SOCIALES-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+     <!--LINK PARA AGREGAR LA LIBRERIA DE ICONOS -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-wP2m3D9BU5QV28qLniWOxC2L2eKDMY5Egy5WH1llKOAdSoZ/YhuBs3Fk8rwCpWG0DYYW1QCWacBcRsRhVgE0jg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="padre">
@@ -23,13 +26,13 @@
                 <nav class="nav">
                     <a href="#" class="logo" target="blank"><img src="img/LOGO MI PYME VEC 06-07-22.png" alt="Logo"></a>
                     <ul>
-                      <li><a href="index.html" target="blank">Inicio</a></li>
+                      <li><a href="index.html" target="_self">Inicio</a></li>
                       <li><a href="#" target="blank">Servicios</a></li>
                       <li class="submenu">
                         <a href="#" target="blank">Acerca de</a>
                         <ul class="hijos">
-                          <li><a href="mision.html">Misión</a></li>
-                          <li><a href="vision.html">Visión</a></li>
+                          <li><a href="mision.html" target="_self" >Misión</a></li>
+                          <li><a href="vision.html" target="_self" >Visión</a></li>
                           <li><a href="#">Valores</a></li>
                           <li><a href="#">Nuestros Clientes</a></li>
                        </ul>
@@ -124,33 +127,22 @@
     </section>
             <!--CREACION DEL FOOTER-->
     <footer class="footer container">
-
-       
         <div class="links">
-            <h4>Lorem ipsum dolor </h4>
+            <h4>Sobre Nosotros</h4>
             <ul>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
+                <li class="fas fa-arrow-right"><p>“Somos una empresa responsable, que se dedica a impulsar el crecimiento sostenible de las pequeñas empresas" </p></li>
             </ul>
         </div>
-        <div class="links">
-            <h4>Lorem ipsum dolor</h4>
+        <div class="links2">
+            <h4>Contáctanos y solicita ya tu crédito en la agencia más cercana</h4>
             <ul>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
-            </ul>
-        </div>
-        <div class="links">
-            <h4>Lorem ipsum dolor</h4>
-            <ul>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
+                <li class="fas fa-arrow-right"><a href="#">Planta Principal</a></li>
+                <li class="fas fa-arrow-right"><a href="#">Agencia Danlí</a></li>
+                <li class="fas fa-arrow-right"><a href="#">Agencia Comayagua</a></li>
+                <li class="fas fa-arrow-right"><a href="#">Agencia Siguatepeque</a></li>
+                <li class="fas fa-arrow-right"><a href="#">Agencia Intibucá</a></li>
+                <li class="fas fa-arrow-right"><a href="#">Agencia El Paraíso</a></li>
+                <li class="fas fa-arrow-right"><a href="#">Agencia Santa Rosa De Copán</a></li>
             </ul>
         </div>
         <div class="links">
