--- a/mision.html
+++ b/mision.html
@@ -18,7 +18,7 @@
                     <nav class="nav">
                         <a href="#" class="logo" target="blank"><img src="img/LOGO MI PYME VEC 06-07-22.png" alt="Logo"></a>
                         <ul>
-                          <li><a href="index.html" target="blank" target="_self">Inicio</a></li>
+                          <li><a href="index.html" target="_self" >Inicio</a></li>
                           <li><a href="#" target="blank">Servicios</a></li>
                           <li class="submenu">
                             <a href="#" target="blank">Acerca de</a>
